added stashed change in index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 hii this is index.html file.....
 
 this is first update...
+ Updated upstream
 this is stash practical....
+this is new change...
+ Stashed changes
